Fixed heights on mobile

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -19,7 +19,7 @@ html body {
 .Header {
   background-color: #fff;
   border-bottom: 4px solid rgba(0, 0, 0, 0.15);
-  min-height: 60px;
+  min-height: 40px;
   transition: all 0.4s ease;
 }
 
@@ -28,7 +28,7 @@ html body {
 }
 
 .Header.shrink {
-  min-height: 60px;
+  min-height: 40px;
 }
 
 .navbar-toggler {
@@ -41,7 +41,7 @@ html body {
 }
 
 #Banner {
-  background: url('https://res.cloudinary.com/christiank/image/upload/v1510628508/cover_cropped_450px_hn9fny.jpg') no-repeat;
+  background: url('../images/cover_cropped_450px.jpg') no-repeat;
   background-position: 50% 25%;
   height: 300px;
   background-size: cover;
@@ -109,12 +109,12 @@ i.fa {
 
 .Footer {
   background-color: #fff;
-  height: 60px;
+  height: 40px;
 }
 
 @media (min-width: 768px) {
   html body {
-    padding-top: 60px;
+    padding-top: 40px;
   }
 
   .Header > .navbar-brand {
